@@ -4,6 +4,9 @@ version 0.9.6 (yet unreleased)
 o fix compilation problem due to missing headers (Krisztian Kovacs)
 o include kernel options and Fedora comments in the INSTALL file
 
+= conntrackd =
+o Remove window tracking disabling limitation (requires Linux kernel >= 2.6.22)
+
 version 0.9.5 (2007/07/29)
 ------------------------------
 
